# CTBot

./: .env.example  .gitignore  Makefile  README.md  WINDOWS_GUIDE.md  pyproject.toml  run.bat  run.ps1
src/: basic_bot.py  cli.py  db_viewer.py  interactive_cli.py  web_ui.py
src/bot/: client.py  config.py  database.py  logger.py  models.py  utils.py  validators.py
src/bot/services/: orders.py  symbols.py
src/templates/: index.html
tests/: test_orders.py  test_validators.py
